  * AWS Security Hub
    * Added cmdlets to support the AWS Security Hub service (Preview). AWS Security Hub provides you with a comprehensive view of your security state within AWS and your compliance with the security industry standards and best practices. Security Hub collects security data from across AWS accounts, services, and supported third-party partners and helps you analyze your security trends and identify the highest priority security issues. Cmdlets for the service have the noun prefix SHUB and can be listed using the command 'Get-AWSCmdletName -Service SHUB'.
  * AWS Transfer for SFTP
	* Added cmdlets to support the AWS Transfer for SFTP service. AWS Transfer is a fully managed service that enables the transfer of files over the Secure File Transfer Protocol (SFTP) directly into and out of Amazon Simple Storage Service (Amazon S3). Cmdlets for the service have the noun prefix TFR and can be listed using the command 'Get-AWSCmdletName -Service TFR'.
	
### 3.3.422.0 (2018-12-06)
  * Amazon CloudDirectory
    * [Breaking Change] The service output for the APIs called by the Get-CDIRObjectParent cmdlet has been updated and it is no longer possible for these cmdlets to return all available data using automatic pagination. You script will need to be updated to manually paginate the returned data using the *NextToken* parameter and field in the returned service response.
  * Amazon EC2
    * [Breaking Change] The response data from the service's CreateFleet API has been extended to emit the instances launched in the API response.
    * Added and updated cmdlets:
      * Transit Gateway helps easily scale connectivity across thousands of Amazon VPCs, AWS accounts, and on-premises networks.
      * Added the AvailabilityZoneId parameter to Get-AvailabilityZone cmdlet.
      * VM Import/Export now supports generating encrypted EBS snapshots, as well as AMIs backed by encrypted EBS snapshots during the import process.