@@ -9,6 +9,8 @@
     * Added cmdlets to support the AWS DataSync service. AWS DataSync is a managed data transfer service that makes it simpler for you to automate moving data between on-premises storage and Amazon Simple Storage Service (Amazon S3) or Amazon Elastic File System (Amazon EFS). Cmdlets for the service have the noun prefix DSYN and can be listed using the command 'Get-AWSCmdletName -Service DSYN'.
   * AWS Resource Access Manager
     * Added cmdlets to support the AWS Resource Manager service. AWS Resource Access Manager (AWS RAM) enables you to share your resources with any AWS account or organization in AWS Organizations. Customers who operate multiple accounts can create resources centrally and use AWS RAM to share them with all of their accounts to reduce operational overhead. Cmdlets for the service have the noun prefix RAM and can be listed with the command 'Get-AWSCmdletName -Service RAM'.
+  * AWS RDS DataService
+    * Added cmdlet Invoke-RDSDSqlExecution to support the AWS RDS DataService. The AWS RDS DataService provides a Http Endpoint to query RDS databases.  The noun prefix for this service is RDSD which will also be applied to any new APIs this service exposes.
   * AWS Security Hub
     * Added cmdlets to support the AWS Security Hub service (Preview). AWS Security Hub provides you with a comprehensive view of your security state within AWS and your compliance with the security industry standards and best practices. Security Hub collects security data from across AWS accounts, services, and supported third-party partners and helps you analyze your security trends and identify the highest priority security issues. Cmdlets for the service have the noun prefix SHUB and can be listed using the command 'Get-AWSCmdletName -Service SHUB'.
   * AWS Transfer for SFTP
